--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
+/* font-family: 'Roboto', sans-serif; */
+
 h1 {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
   font-size: 3rem;
 }
 body {
@@ -9,7 +12,8 @@ body {
 th,
 td {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  border: 1px solid grey;
+  border: 2px solid grey;
+  border-spacing: 50px;
   /* border-collapse: collapse; */
   padding: 15px;
   text-align: right;
@@ -21,7 +25,7 @@ td {
   padding: 20px 30px;
   position: absolute;
   top: 30%;
-  right: 5%;
+  right: 20%;
   text-align: right;
 }
 .quote-div {
@@ -34,11 +38,12 @@ td {
 .table-div {
   background-color: yellow;
   text-align: center;
-  height: 200px;
+  height: 600px;
 }
 
 .quote {
-  font-family: cursive;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
   font-size: 2rem;
   color: white;
 
@@ -54,7 +59,17 @@ td {
 .books-read {
   position: absolute;
   left: 20px;
-  padding: 20px;
-  margin: 10px auto 20px;
-  width: 90%;
+  padding: 40px;
+  margin: 50px auto;
+  width: 94%;
+}
+
+.button-add {
+  margin: 10px;
+  /* padding: 10px; */
+  /* position: absolute;
+  top: 5px;
+  left: 90%; */
+  margin-top: 50px;
+  margin-left: 75%;
 }
