--- a/css/style.css
+++ b/css/style.css
@@ -22,23 +22,27 @@ td {
 #quote-writer {
   font-family: monospace;
   color: black;
+  margin: 50px;
   padding: 20px 30px;
   position: absolute;
-  top: 30%;
-  right: 20%;
+  top: 40%;
+  right: 40%;
   text-align: right;
 }
 .quote-div {
   background-color: grey;
   margin: 0;
-  height: 300px;
-  width: 100%;
+  height: 400px;
+  width: 55%;
+  text-align: center;
+  z-index: -2;
 }
 
 .table-div {
   background-color: yellow;
   text-align: center;
   height: 600px;
+  z-index: 10;
 }
 
 .quote {
@@ -48,12 +52,12 @@ td {
   color: white;
 
   /* height: 150px; */
-  width: 80%;
-  margin: 0;
-  padding: 50px auto 0;
+  width: 60%;
+  /* margin: 0; */
+  padding: 50px 50px 50px;
   position: absolute;
-  top: 15%;
-  text-align: center;
+  top: 20%;
+  /* text-align: center; */
 }
 
 .books-read {
@@ -89,4 +93,15 @@ td {
   font-weight: 900;
   font-size: 3rem;
   padding: 0 30px;
+}
+
+#quote-writer-img {
+  width: 60%;
+  position: absolute;
+  right: -20px;
+  top: 12%;
+  /* bottom: 0; */
+  z-index: -1;
+  margin-right: 0;
+  margin-left: 0;
 }
